Fix 1px jumping of input fields on focus

--- a/css/style.css
+++ b/css/style.css
@@ -140,8 +140,8 @@ form > * {
 }
 
 input {
-    border: 0;
-    border-bottom: 1px solid #3f3e3e;
+    border: 1px solid #100f0f;
+    border-bottom-color: #3f3e3e;
     background-color: #100f0f;
     font-family: "Helvetica Neue Thin", 'Helvetica Neue', sans-serif;
     font-size: 1em;
